回滚版本到分支中的某一个commit时间点 git reset [commit 哈希值] :joy:

--- a/0712/src/scss/_banner.scss
+++ b/0712/src/scss/_banner.scss
@@ -56,6 +56,11 @@ a {
   }
 }
 
+.app {
+  background: url(./img/loader.svg) no-repeat center 20px;
+  background-size: 120px 120px;
+}
+
 .floor {
   padding: 30px 0;
   ul {
