--- a/0712/src/scss/_banner.scss
+++ b/0712/src/scss/_banner.scss
@@ -79,7 +79,33 @@ a {
     margin-bottom: 15px;
     background: url(./img/loader.svg) no-repeat center center;
     background-size: 120px 120px;
+    position: relative;
     float: left;
+    .icon {
+      position: absolute;
+      top: 0;
+      left: 14px;
+      width: 38px;
+      height: 57px;
+      background-repeat: no-repeat;
+      background-position: center top;
+      background-size: 100% 100%;
+    }
+    &.li_1 {
+      .icon {
+        background-image: url(./img/1.png);
+      }
+    }
+    &.li_2 {
+      .icon {
+        background-image: url(./img/2.png);
+      }
+    }
+    &.li_3 {
+      .icon {
+        background-image: url(./img/3.png);
+      }
+    }
     a {
       display: block;
     }
