Every noble work is at first impossible :bear:

--- a/0712/src/scss/_banner.scss
+++ b/0712/src/scss/_banner.scss
@@ -39,8 +39,7 @@ a {
       &.cur {
         padding-left: 10px;
         /*no*/
-        background-color: #ca2654;
-        background: url(./img/on.png) no-repeat 6px center;
+        background: #ca2654 url(./img/on.png) no-repeat 6px center;
         /*no*/
         background-size: 10px 13px;
         /*no*/
