再把新建的分支删掉： git branch -d dev :kissing_cat:

--- a/0831/src/scss/_banner.scss
+++ b/0831/src/scss/_banner.scss
@@ -14,7 +14,7 @@ a {
 }
 
 .nav-tap {
-  background-color: #eb5539;
+  background-color: #d54429;
   height: 44px;
   /*no*/
   position: relative;
@@ -39,7 +39,7 @@ a {
       font-size: 16px;
       /*no*/
       text-align: center;
-      background-color: #eb5539;
+      background-color: #d54429;
       &.cur {
         background-color: #bc2e14;
         a {
